Java 5+ and FindBugs cleanup