@@ -57,8 +57,8 @@ public class ExecutionTableModel extends AbstractTableModel {
         if(exchangeIdToExecution.get(execution.getExchangeID()) != null)
             return;
 
-        rowToExecution.put(new Integer(row), execution);
-        idToRow.put(execution.getID(), new Integer(row));
+        rowToExecution.put(Integer.valueOf(row), execution);
+        idToRow.put(execution.getID(), Integer.valueOf(row));
         idToExecution.put(execution.getID(), execution);
         exchangeIdToExecution.put(execution.getExchangeID(), execution);
 
@@ -70,7 +70,7 @@ public class ExecutionTableModel extends AbstractTableModel {
     }
 
     public Execution getExecution(int row) {
-        return rowToExecution.get(new Integer(row));
+        return rowToExecution.get(Integer.valueOf(row));
     }
 
     public void setValueAt(Object value, int rowIndex,
@@ -94,18 +94,18 @@ public class ExecutionTableModel extends AbstractTableModel {
 
     public Object getValueAt(int rowIndex, int columnIndex) {
         Execution execution = rowToExecution.get
-                              (new Integer(rowIndex));
+                              (Integer.valueOf(rowIndex));
 
         switch(columnIndex) {
         case SYMBOL:
             return execution.getSymbol();
         case QUANTITY:
-            return new Integer(execution.getQuantity());
+            return Integer.valueOf(execution.getQuantity());
         case SIDE:
             return execution.getSide();
         case PRICE:
             return new Double(execution.getPrice());
         }
-        return new String();
+        return "";
     }
 }
